--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postcss": "^8.4.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
