--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postcss": "^8.4.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hide-on-scroll": "^1.1.4",
     "react-responsive-carousel": "^3.2.23",
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.0",
