--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^8.18.5",
+    "@react-three/fiber": "^7.0.26",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -17,7 +19,9 @@
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
+    "react-spring": "^9.4.4",
     "tailwindcss": "^3.0.23",
+    "three": "^0.138.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
