--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postcss": "^8.4.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-headscroll": "^2.1.13",
     "react-hide-on-scroll": "^1.1.4",
     "react-responsive-carousel": "^3.2.23",
     "react-reveal": "^1.2.2",
