--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
     "react-spring": "^9.4.4",
+    "react-switch": "^6.0.0",
     "tailwindcss": "^3.0.23",
     "three": "^0.138.3",
     "web-vitals": "^2.1.0"
